<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <LinearLayout
        android:id="@+id/ln1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="50dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/editTextInput"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/EnterChar"
            android:inputType="text" />

        <TextView
            android:id="@+id/tvShowText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/ChuoiVuaNhap"
            android:textColor="@color/blue"
            android:textSize="18sp" />
    </LinearLayout>

    <!--
 		android:layout_alignParentBottom="true"
 		android:layout_centerHorizontal="true"
 		2 thuoc tinh nay qui dinh Button o duoi cung va chinh duoi cua RelativeLayout
    -->

    <Button
        android:id="@+id/btShowText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/ClickMe" />

</RelativeLayout>